# LITRA

./: .gitignore  AGENTS.md  LICENSE  LICENSE.rtf  README.md  Trunk.toml  chat-window.html  compliance.txt  genre-chat-window.html  genre-library.html  index.html  memo-window.html  package-lock.json  package.json  project-memo-window.html  project-panel-window.html  settings-window.html  summary-window.html  tsconfig.json  vite.config.ts
.cocoindex_code/: settings.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
config/: default-providers.json
docs/design/: design.md  thinking-controls.md
frontend-rs/: Cargo.toml
frontend-rs/src/: lib.rs
frontend-rs/src/ai/: cache_observability.rs  capability.rs  draft_checks.rs  mod.rs  plan_beats.rs  provider_options.rs  role_settings.rs  structured_output.rs  style_fingerprint.rs  text_stats.rs
frontend-rs/src/components/: mod.rs  synced_textarea.rs
frontend-rs/src/data/: genre_store.rs  layout_store.rs  mod.rs  project_settings.rs  projects.rs
frontend-rs/src/data/genres/: analyzer.rs  attachments.rs  chat.rs  hash.rs  knowledge.rs  mod.rs  models.rs  prompts.rs  repository.rs  segmentation.rs  sources.rs
frontend-rs/src/hashline/: apply.rs  format.rs  input.rs  messages.rs  mismatch.rs  mod.rs  normalize.rs  parser.rs  patcher.rs  recovery.rs  snapshots.rs  tokenizer.rs  types.rs
frontend-rs/src/runtime/: ai.rs  invoke.rs  mod.rs  oauth.rs  tauri.rs  windows.rs
frontend-rs/src/ui/: mod.rs  resizable.rs
frontend-rs/src/windows/: memo.rs  mod.rs  project_memos.rs  summary.rs
frontend-rs/src/windows/chat/: mod.rs  render.rs  types.rs
frontend-rs/src/windows/genre_chat/: events.rs  mod.rs  render.rs  tools.rs
frontend-rs/src/windows/genre_chat/old_genre_prompts/: chat_messages_text.txt  genre_chat_messages.txt  knowledge_extraction.txt  segment_analysis.txt  source_synthesis.txt
frontend-rs/src/windows/genre_library/: events.rs  mod.rs  render.rs
frontend-rs/src/windows/main_app/: agent_tools.rs  ai_actions.rs  events.rs  hashline_tools.rs  mod.rs  prompt_context.rs  render.rs  settings.rs  system_prompt.txt
frontend-rs/src/windows/main_app/agent_tools/: genre.rs  project.rs  writing.rs
frontend-rs/src/windows/main_app/generation/: mod.rs  old_prompts.rs  prompts.rs  review.rs
frontend-rs/src/windows/main_app/generation/old_prompts/: author_instruction.txt  beat_directive_section.txt  character_voice_section.txt  character_voices.txt  draft.txt  feedback.txt  line_edit_review.txt  line_edit_revision.txt  plan.txt  review.txt  revise.txt  rewrite.txt  scene_state.txt  scene_state_section.txt  select_candidate.txt  select_draft.txt  style_fingerprint_section.txt  summary.txt  targeted_revision.txt  tool_call_need.txt  tool_guidance.txt
frontend-rs/src/windows/main_app/imports/: classify.rs  mod.rs  model.rs  render.rs  review.rs
frontend-rs/src/windows/main_app/settings/: form.rs  integrations.rs  licenses.rs  mod.rs  models.rs  oauth_ui.rs
frontend-rs/src/windows/settings/: events.rs  mod.rs  render.rs  types.rs
legal/: THIRD_PARTY_LICENSES.json  THIRD_PARTY_LICENSES.md
public/: third-party-licenses.json
scripts/: generate-licenses.mjs
src/: chat-window.ts  genre-chat-window.ts  genre-library-window.ts  layout-store.ts  main.ts  markdown.ts  memo-window.ts  project-memo-window.ts  project-panel-window.ts  secrets.ts  settings-merge.ts  settings-window.ts  settings.ts  state.ts  styles.css  summary-window.ts  websearch-settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: child-windows.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_oauth.rs  genre_search.rs  genre_store.rs  genre_windows.rs  import.rs  layout_store.rs  lib.rs  main.rs  project_memo.rs  search.rs  secrets.rs  settings.rs  storage.rs  tools.rs  web_fetch.rs  web_search.rs  webdav_sync.rs  window_state.rs
src-tauri/src/ai/: config.rs  mod.rs  models.rs  transport.rs  types.rs
src-tauri/src/ai/auth/: store.rs
src-tauri/src/ai/messages/: anthropic.rs  google.rs  mod.rs  openai.rs
src-tauri/src/ai/oauth/: copilot.rs  mod.rs
src-tauri/src/ai/providers/: codex.rs  copilot.rs  mod.rs  opencode.rs  plamo.rs  sakura.rs
src-tauri/src/ai/stream/: anthropic.rs  google.rs  mod.rs  openai.rs  state.rs
src-tauri/src/project_store/: episodes.rs  mod.rs  types.rs
src/ai/: cache-observability.ts  capability.ts  consistency.ts  draft-checks.ts  model-list.ts  plan-beats.ts  prompts.ts  provider-options.ts  provider.ts  role-settings.ts  rust-tools.ts  rust-transport.ts  service.ts  structured-output.ts  style-fingerprint.ts  text-stats.ts  tools.ts
src/genres/: analysis-schema.ts  analyzer.ts  chat-attachments.ts  chat-context.ts  chat-tools.ts  chat.ts  events.ts  hash.ts  knowledge.ts  prompts.ts  repository.ts  schema.ts  segmentation.ts  sources.ts
src/project/: documents.ts  episodes.ts  import-review.ts  import.ts  memos.ts  passage-proposals.ts  project-memo.ts  related-scenes.ts  relationships.ts  repository.ts  schema.ts  settings.ts  summaries.ts
src/ui/: chat.ts  (+14 more)
(+31 files in other folders)
