[package]
name = "litra-frontend"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlButtonElement",
  "HtmlElement",
  "HtmlTextAreaElement",
  "Window",
] }
