[package]
name = "litra-frontend"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
ammonia = "4"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "DomTokenList",
  "CssStyleDeclaration",
  "Element",
  "Event",
  "EventTarget",
  "Blob",
  "File",
  "FileList",
  "HtmlButtonElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlFormElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "Window",
] }
