[package]
name = "litra-frontend"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
ammonia = "4"
once_cell = "1"
pulldown-cmark = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "AbortController",
  "Document",
  "DomTokenList",
  "console",
  "CssStyleDeclaration",
  "Element",
  "Event",
  "EventTarget",
  "Blob",
  "File",
  "FileList",
  "HtmlButtonElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlFormElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "PointerEvent",
  "Window",
] }
