[package]
name = "litra"
version = "1.0.0"
description = "AI-assisted Japanese fiction writing workspace"
authors = ["rumia"]
license = "BSD-2-Clause"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "litra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
# 0.26 で追加された TopDocs::order_by_score 等の API を使うため下限を固定する
# (Cargo.lock は非追跡方針のため、指定が緩いと環境ごとに古い版へ解決され得る)
tantivy = "0.26"
chrono = { version = "0", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0"
base64 = "0"
quick-xml = "0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
rand = "0"
sha2 = "0"
tokio = { version = "1", features = ["sync", "time"] }
tokio-util = "0"
html2text = "0"
htmd = "0"
ua_generator = { version = "0", default-features = false }


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
